--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.app-wrapper {
+    padding: 5px;
+    display: grid;
+    grid-template-areas:
+"h h"
+"n c";
+    max-width: fit-content;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    margin: 0 auto;
+    /*!*width: 1200px;*!*/
+    /*background-image: url("../public/backG.png");*/
+    /*background-repeat: repeat;*/
+    /*background-size: auto;*/
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-wrapper-content {
+    grid-area: c;
+    max-width: 10fr;
+    background-color: #e7e6e8;
+    margin: 10px;
+    margin-right: 5px;
+    margin-left: 0px;
 }
