--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,8 +2,10 @@
 .nav {
     grid-area: n;
     min-width: 120px;
+    height: 100%;
     background-color: #c2c1c4;
     margin: 10px;
+    padding: 10px;
 }
 
 .item {
@@ -14,8 +16,17 @@
     border: 1px solid #6c848c;
     border-radius: 5px;
     font-family: AppleGothic;
-    text-transform: uppercase;
     font-size: 85%;
     font-weight: bold;
     letter-spacing: 2px;
+}
+
+.item a {
+    color: black;
+    text-decoration: none;
+}
+
+
+.item a.active {
+
 }
